# IAM

backend/: .env.template  .gitignore  Pipfile  README.md  pyproject.toml  requirements.txt
backend/app/: alembic.ini  main.py  pyproject.toml
backend/app/api/: deps.py  routers.py
backend/app/api/exceptions/: __init__.py  action_exceptions.py  auth_exceptions.py  base.py  object_exceptions.py  token_exception.py  user_exceptions.py
backend/app/api/handlers/: action.py  auth.py  base.py  internal.py  object.py  permission.py  resource.py  role.py  user.py
backend/app/config/: constants.py  settings.py
backend/app/config/security/: __init__.py  auth_security.py  password.py  password_security.py  permission.py  token.py
backend/app/constants/actions/: __init__.py  constant.py  schema.py
backend/app/constants/objects/: __init__.py  constant.py  schema.py
backend/app/core/: scheduler.py  settings.py  tasks.py
backend/app/database/: logic.py  models.py  postgres.py
backend/app/database/core/: init_database.py  session.py
backend/app/database/crud/: __init__.py  base.py  crud_action.py  crud_object.py  (+3 more)
backend/app/db/: database.py  shortcuts.py
backend/app/migrations/: env.py
backend/app/models/: __init__.py  action.py  models.py  object.py  permission.py  resource.py  role.py  session.py  user.py
backend/app/schemas/: action.py  auth.py  base.py  object.py  permission.py  resource.py  role.py  token.py  user.py
backend/docker/: Dockerfile  celery-beat.dockerfile  docker-compose.yaml  entrypoint.sh
backend/script/: celery-beat.sh  entrypoint.sh
(+70 files in other folders)
