[tool.poetry]
name = "iam"
version = "0.1.0"
description = ""
authors = ["MrMihen13 <kmerezhnikov2002@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.22.0"
fastapi = "^0.100.0"
tortoise-orm = "^0.19.3"
passlib = "^1.7.4"
pydantic = {extras = ["email"], version = "^2.0.2"}
python-jose = "^3.3.0"
pydantic-settings = "^2.0.1"
aerich = "^0.7.1"
asyncpg = "^0.28.0"
bcrypt = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
